src/fhiclcpp/fhiclcpp/test/testFiles/pass/leading_zero_pass.fcl
#===========================================
# Testing Parsing of Leading Zeros
# What's Wrong: Leading Zero Shouldn't Parse
#===========================================

x : 05
y : 5
