src/fhiclcpp/fhiclcpp/test/testFiles/fail/name_fail.fcl
#===========================================
# Testing Incorrect Name Syntax
# What's Wrong: No Leading Numbers in Names
#===========================================

1ab : 5
